[package]
name = "dialog_system_alpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cute_print = "0.7.0"
pause_console = "0.1.3"
text_io = "0.1.12"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"